# bebop_ws

./: .gitignore  .gitmodules  READ.md  README.md  gitignore
bebop_client/include/: BebopClient.hpp
bebop_client/src/: BebopClient.cpp
bebop_control/: CMakeLists.txt  package.xml
bebop_control/include/bebop_control/: DirtyDerivative.hpp
bebop_control/launch/: bebop_control.launch.py
bebop_control/param/: bebop_param.yaml
bebop_control/src/: DirtyDerivative.cpp  bebop_control_node.cpp
bebop_server/: CMakeLists.txt
bebop_server/launch/: joy_debug.launch.py  single_bebop.launch.py
bebop_server/param/: xbox_controller.yaml
bebop_teleop/: README.md
bebop_teleop/launch/: single_bebop.launch.py
bebop_teleop/param/: joy_config.yaml
bebop_teleop/src/: BebopTeleop.cpp
bebop_trajectory_tracking/: package.xml  setup.cfg  setup.py
bebop_trajectory_tracking/bebop_trajectory_tracking/: figure_eight.py
bebop_trajectory_tracking/launch/: differentiator.launch.py  figure_eight_experiment.launch.py
bebop_trajectory_tracking/param/: bebop_view.rviz  differentiator_param.yaml  figure_eight_param.yaml
bebop_trajectory_tracking/test/: test_xmllint.py
install/: local_setup.sh  setup.sh
install/bebop_client/share/bebop_client/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bebop_client/share/bebop_client/cmake/: bebop_clientConfig.cmake
install/bebop_client/share/bebop_client/launch/: client_debug.launch.py
install/bebop_server/share/ament_index/resource_index/package_run_dependencies/: bebop_server
install/bebop_server/share/bebop_server/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bebop_server/share/bebop_server/cmake/: bebop_serverConfig.cmake
install/bebop_teleop/share/ament_index/resource_index/package_run_dependencies/: bebop_teleop
install/bebop_teleop/share/bebop_teleop/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bebop_teleop/share/bebop_teleop/cmake/: bebop_teleopConfig.cmake
install/bebop_teleop/share/bebop_teleop/launch/: joy_debug.launch.py  single_bebop.launch.py
install/ros2_bebop_driver/share/ament_index/resource_index/parent_prefix_path/: ros2_bebop_driver
install/ros2_bebop_driver/share/ros2_bebop_driver/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_bebop_driver/share/ros2_bebop_driver/cmake/: ros2_bebop_driverConfig.cmake
install/ros2_parrot_arsdk/etc/: build.prop
install/ros2_parrot_arsdk/include/mavlink/common/: version.h
install/ros2_parrot_arsdk/include/mavlink/parrot/: version.h
install/ros2_parrot_arsdk/share/ros2_parrot_arsdk/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_parrot_arsdk/share/ros2_parrot_arsdk/cmake/: ament_cmake_export_include_directories-extras.cmake  ros2_parrot_arsdk.cmake  ros2_parrot_arsdkConfig.cmake
install/ros_vrpn_client/share/ros_vrpn_client/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros_vrpn_client/share/ros_vrpn_client/cmake/: ros_vrpn_clientConfig.cmake
install/ros_vrpn_client/share/ros_vrpn_client/launch/: test.launch
levant_filter/: CMakeLists.txt  package.xml
levant_filter/include/levant_filter/: LevantFilter.hpp
levant_filter/launch/: simple_launch.launch.py
levant_filter/param/: levant_filter.yaml
levant_filter/src/: LevantFilter.cpp  levant_node.cpp
log/: latest_build
mocap_filter/: CMakeLists.txt  package.xml
mocap_filter/include/mocap_filter/: KalmanFilter.h
mocap_filter/src/: KalmanFilter.cpp  mocap_filter_node.cpp
mocap_filters/: CMakeLists.txt  package.xml
mocap_filters/config/: filter_params.yaml  filters.yaml
mocap_filters/doc/: math.lyx  symbolic_inverse.py
mocap_filters/include/mocap_filters/: DirtyDerivative.hpp  KalmanFilter.hpp  LevantFilter.hpp  NumericalDifferentiation.hpp  RhoFilter.hpp  rushi_RhoFilter.hpp  rushi_rhoFilter.hpp
mocap_filters/launch/: filters.launch.py  simple_launch.launch.py
mocap_filters/param/: filter_params.yaml
mocap_filters/src/: DirtyDerivative.cpp  KalmanFilter.cpp  LevantFilter.cpp  NumericalDifferentiation.cpp  RhoFilter.cpp  filters_node.cpp  kalman_node.cpp  levant_node.cpp  rho_node.cpp  rushi_RhoFilter.cpp
ncr_lab_viz/rviz/: ncr_lab.rviz
ncr_lab_viz/src/: NCRLabViz.cpp
rho_filter_eval/: package.xml  setup.cfg  setup.py
rho_filter_eval/launch/: analysis.launch.py  benchmark.launch.py
rho_filter_eval/rho_filter_eval/: error_monitor.py  eval_node.py  signal_publisher.py
ros2_bebop_driver/include/ros2_bebop_driver/: bebop.hpp
ros2_bebop_driver/src/: bebop.cpp  bebop_driver_node.cpp
ros2_parrot_arsdk/cmake/: build_arsdk.cmake  fetch_arsdk.cmake  ros2_parrot_arsdk.cmake.in
src/bebop_client/: CMakeLists.txt  package.xml
src/bebop_client/src/: bebop_client_node.cpp
src/bebop_server/: package.xml
src/bebop_server/include/: BebopServer.hpp
src/bebop_server/param/: sony_dualshock3.yaml
src/bebop_server/src/: BebopServer.cpp  bebop_server_node.cpp
src/bebop_teleop/: CMakeLists.txt  package.xml
src/bebop_teleop/include/: BebopTeleop.hpp
src/bebop_teleop/param/: xbox_controller.yaml
src/bebop_teleop/src/: bebop_teleop_node.cpp
src/ros2_bebop_driver/include/ros2_bebop_driver/: bebop_driver_node.hpp
src/ros2_parrot_arsdk/: CMakeLists.txt  README.md
src/ros2_parrot_arsdk/cmake/: install_arsdk.cmake
src/ros2_parrot_arsdk/patches/: mavcrc.py.patch
src/ros_vrpn_client/src/: ros_vrpn_client.cpp
src/vrpn_client_ros2-master/: CMakeLists.txt
src/vrpn_client_ros2-master/config/: param.yaml
src/vrpn_client_ros2-master/src/: vrpn_client_node.cpp  vrpn_client_ros2.cpp  vrpn_tracker_node.cpp
vrpn_client_ros2-master/: README.md  package.xml
vrpn_client_ros2-master/include/vrpn_client_ros2/: vrpn_client_ros2.h
vrpn_client_ros2-master/launch/: sample.launch  sample.launch.py
